libs/preprocessor/tests/errors/pe10_function_as_value/stderr.ansi
[0m[1m[38;5;9merror[PE10][0m[1m: attempted to use a function as a value[0m
  [0m[36m┌─[0m source.hpp:3:12
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #define HELLO(var) Hello var
  [0m[36m│[0m         [0m[36m-----[0m [0m[36mdefined as a function[0m
[0m[36m2[0m [0m[36m│[0m 
[0m[36m3[0m [0m[36m│[0m greeting = [0m[31mHELLO[0m;
  [0m[36m│[0m            [0m[31m^^^^^[0m [0m[31mused as a value[0m

